[package]
name = "sl-terrain"
description = "Second Life / OpenSim terrain texture-splat blend-weight math (elevation bilinear interpolation + Perlin transition band) for clients, mirroring sl-prim / sl-mesh"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "terrain", "splatting", "rendering"]
categories = ["game-development", "rendering", "graphics"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
